corrigindo o JWT service e JWT authfilter